# TFG_IKER_CA

./: GITHUB  TFG_antiguo
Código/: Código básico para 3 TENG.txt  Código básico para transmision de señal bluetooth a Raspberry.txt
Código/Arduino IDE/26-03-2025/: 26-03-2025.ino
Código/Arduino IDE/codigo_de_prueba/: codigo_de_prueba.ino
Código/Python/Algoritmo de prediccion/: prueba_en_tiempo_real.py  prueba_en_tiempo_real_doble.py
Código/Python/Detección de señal/: capturadatodoble.py  capturadatosesp32.py  deteccionesp32.py  medicion_frecuencia_muestreo_real.py  prueba_medicion.csv
Código/Python/Red neuronal/: RNN_Modular.py  Red_CNN_LSTM.py  Red_CNN_LSTM_Ventanas_Consecutivas.py  etiquetas_secuencias.npy  media_entrenamiento.npy  modelo_test.py  std_entrenamiento.npy
Código/Python/Red neuronal_definitivo/: Entrenamiento_y_visualizacion.py  Modelo.py  Preprocesado_modular.py
Código/Python/Red neuronal_definitivo_ruido/: Main.py  matriz_confusion.py  scaler_global.save
Código/Python/Red neuronal_definitivo_sin_ruido/: Entrenamiento_y_visualizacion.py  Main.py  Modelo.py  Preprocesado_modular.py  matriz_confusion.py
Código/Python/Red_neuronal_doble/: Entrenamiento_y_visualizacion.py  Main.py  Matriz_confusion.py  Modelo.py  Preprocesado_modular.py
ProcessVideos/: CMakeLists.txt  TrackAprox.cpp  TrackAprox_orig.cpp
ProcessVideos/RaspberryCam/Include/: OCV_Funcs.hpp
ProcessVideos/RaspberryCam/Source/: OCV_Funcs.cpp
TFG_antiguo/ProcessVideos/: CMakeLists.txt  TrackAprox.cpp  TrackAproxIker.cpp  TrackAprox_orig.cpp
(+11 files in other folders)
